
  [ Josselin Mouette ]
  * update-icon-caches: always exit with a 0 code to avoid breaking 
    upgrades when a cache is corrupt. Display a big fat warning instead.
    Closes: #466083.

  [ Sebastian Dröge ]
  * New upstream bugfix release:
    + 092_recentfiles-recursion-fix, dropped merged upstream.
    + 070_mandatory-relibtoolize.patch, regenerated for the new version.
  * debian/rules:
    + Don't ship very old upstream changelogs and news as they're quite large.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 12 Mar 2008 09:41:23 +0100

gtk+2.0 (2.12.8-1) unstable; urgency=low

  * New upstream bugfix release:
    + debian/patches/040_filechooser_single-click.patch,
      debian/patches/093_directfb-type-changes.patch,
      debian/patches/094_directfb-deprecation-fixes.patch:
      - Dropped, merged upstream.
    + debian/patches/070_mandatory-relibtoolize.patch:
      - Regenerated for the new version.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 13 Feb 2008 09:11:50 +0100

gtk+2.0 (2.12.7-1) unstable; urgency=low

  * Fix GNOME casing in gtk-faq and gtk doc base descriptions.
  * Drop cruft trying to convert /usr/share/doc/libgtk2.0-0 directory into a
    symlink in libgtk2.0-0.postinst; thanks Sven Joachim; closes: #462057.
  * New upstream stable release; no API change; bug fixes and translation
    updates.
    - Refresh patches 033_treeview_resizing, 042_treeview_single-focus to
      apply cleanly.
    - Update relibtoolizing patch, 070_mandatory-relibtoolize
    - New patch, 094_directfb-deprecation-fixes, fixes directfb build with
      GLib 2.15 deprecation of G_GNUC_FUNCTION in favor of G_STRLOC.
  * Fix ordering in series.
  * New patch, 095_gtk-im-module-setting, adds XSETTINGS support for immodule;
    from GNOME 502446.
  * New upstream release; no change tarball update.

 -- Loic Minier <lool@dooz.org>  Mon, 21 Jan 2008 18:42:28 +0100

gtk+2.0 (2.12.5-2) unstable; urgency=medium

  * Add ${shlibs:Depends} to libgtk2.0-dev.