@@ -1,4 +1,3 @@
 usr/share/doc/@COMMON_PKG@/changelog.gz usr/share/doc/@PIXBUF_PKG@/changelog.gz
 usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@PIXBUF_PKG@/NEWS.gz
-usr/share/doc/@COMMON_PKG@/NEWS.pre-1-0.gz usr/share/doc/@PIXBUF_PKG@/NEWS.pre-1-0.gz
 usr/share/doc/@COMMON_PKG@/README.gz usr/share/doc/@PIXBUF_PKG@/README.gz
