@@ -5,5 +5,4 @@ usr/lib/@SHARED_PKG@/update-gtk-immodules usr/sbin/update-gtk-immodules
 usr/lib/@SHARED_PKG@/update-gdkpixbuf-loaders usr/sbin/update-gdkpixbuf-loaders
 usr/share/doc/@COMMON_PKG@/changelog.gz usr/share/doc/@BIN_PKG@/changelog.gz
 usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@BIN_PKG@/NEWS.gz
-usr/share/doc/@COMMON_PKG@/NEWS.pre-1-0.gz usr/share/doc/@BIN_PKG@/NEWS.pre-1-0.gz
 usr/share/doc/@COMMON_PKG@/README.gz usr/share/doc/@BIN_PKG@/README.gz
